<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>

        <item
            android:id="@+id/profile"
            android:title="@string/my_profile"
            android:icon="@drawable/ic_profile"/>

        <item
            android:id="@+id/favourites"
            android:title="@string/favourite_restaurants"
            android:icon="@drawable/ic_favourite"/>

        <item
            android:id="@+id/order"
            android:title="@string/order_history"
            android:icon="@drawable/ic_order"/>


        <item
            android:id="@+id/faq"
            android:title="@string/faq_s"
            android:icon="@drawable/ic_faq"/>

        <item
            android:id="@+id/logout"
            android:title="@string/log_out"
            android:icon="@drawable/ic_logout"/>

    </group>
</menu>